Update agar tidak 405 not found

--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Register - Nusantara Sekai</h1>
-    <form action="login.html" method="POST" enctype="multipart/form-data">
+    <form action="login.html">
         <table border="1" cellpadding="10">
             <tr>
                 <td><label for="username">Username:</label></td>
