--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Login - Nusantara Sekai</h1>
-    <form action="main.html" method="POST">
+    <form action="main.html">
         <table border="1" cellpadding="10">
             <tr>
                 <td><label for="username">Username:</label></td>
